--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,6 @@
-qtwayland-opensource-src (5.4.0-2) UNRELEASED; urgency=medium
+qtwayland-opensource-src (5.4.1-1) UNRELEASED; urgency=medium
 
-  [ Lisandro Damián Nicanor Pérez Meyer ]
-  * Re-add Pino to the list of Uploaders, he is still active in the team.
-
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 05 Jan 2015 22:01:33 -0300
-
-qtwayland-opensource-src (5.4.0-1) experimental; urgency=low
-
+  [ Dmitry Shachnev ]
   * Initial release (closes: #697509).
 
- -- Dmitry Shachnev <mitya57@debian.org>  Wed, 31 Dec 2014 20:37:29 +0300
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 05 Jan 2015 22:01:33 -0300
