--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,5 @@
-qtwayland-opensource-src (5.4.1-1) UNRELEASED; urgency=medium
+qtwayland-opensource-src (5.4.1-1) experimental; urgency=medium
 
-  [ Dmitry Shachnev ]
   * Initial release (closes: #697509).
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 05 Jan 2015 22:01:33 -0300
+ -- Dmitry Shachnev <mitya57@debian.org>  Tue, 03 Mar 2015 13:36:49 +0300
