--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+qtwayland-opensource-src (5.4.1-2) UNRELEASED; urgency=medium
+
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 06 Mar 2015 20:41:25 +0300
+
 qtwayland-opensource-src (5.4.1-1) experimental; urgency=medium
 
   * Initial release (closes: #697509).
