--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 qtwayland-opensource-src (5.4.1-2) UNRELEASED; urgency=medium
 
+  [ Dmitry Shachnev ]
+  * Limit libmtdev-dev and libudev-dev build-dependencies to linux-any.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 06 Mar 2015 20:41:25 +0300
 
