--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,10 @@
-qtwayland-opensource-src (5.4.1-2) UNRELEASED; urgency=medium
+qtwayland-opensource-src (5.4.2-1) UNRELEASED; urgency=medium
 
   [ Dmitry Shachnev ]
   * Limit libmtdev-dev and libudev-dev build-dependencies to linux-any.
+
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * new upstream release.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 06 Mar 2015 20:41:25 +0300
 
