--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ qtwayland-opensource-src (5.4.2-1) UNRELEASED; urgency=medium
 
   [ Lisandro Damián Nicanor Pérez Meyer ]
   * New upstream release.
+    - Bump Qt build dependencies.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 06 Mar 2015 20:41:25 +0300
 
