--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-qtwayland-opensource-src (5.4.2-1) UNRELEASED; urgency=medium
+qtwayland-opensource-src (5.4.2-1) experimental; urgency=medium
 
   [ Dmitry Shachnev ]
   * Limit libmtdev-dev and libudev-dev build-dependencies to linux-any.
@@ -8,7 +8,7 @@ qtwayland-opensource-src (5.4.2-1) UNRELEASED; urgency=medium
     - Bump Qt build dependencies.
   * Update symbols files with current build log.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 06 Mar 2015 20:41:25 +0300
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Tue, 02 Jun 2015 18:04:18 -0300
 
 qtwayland-opensource-src (5.4.1-1) experimental; urgency=medium
 
