--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtwayland-opensource-src (5.4.2-2) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 23 Jun 2015 12:43:17 -0300
+
 qtwayland-opensource-src (5.4.2-1) experimental; urgency=medium
 
   [ Dmitry Shachnev ]
