--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
-qtwayland-opensource-src (5.4.2-2) UNRELEASED; urgency=medium
+qtwayland-opensource-src (5.4.2-2) unstable; urgency=medium
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 23 Jun 2015 12:43:17 -0300
+  * Upload to unstable.
+
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Tue, 23 Jun 2015 12:44:45 -0300
 
 qtwayland-opensource-src (5.4.2-1) experimental; urgency=medium
 
