--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,8 @@
-qtwayland-opensource-src (5.4.2-3) UNRELEASED; urgency=medium
+qtwayland-opensource-src (5.4.2-3) unstable; urgency=medium
 
-  [ Lisandro Damián Nicanor Pérez Meyer ]
   * Update symbols files with current build log against gcc5.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 09 Aug 2015 23:07:22 -0300
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sun, 09 Aug 2015 23:13:04 -0300
 
 qtwayland-opensource-src (5.4.2-2) unstable; urgency=medium
 
