--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+qtwayland-opensource-src (5.5.0-1) UNRELEASED; urgency=medium
+
+  [ Dmitry Shachnev ]
+  * New upstream release.
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 25 Aug 2015 09:25:11 +0300
+
 qtwayland-opensource-src (5.4.2-3) unstable; urgency=medium
 
   * Update symbols files with current build log against gcc5.
