--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtwayland-opensource-src (5.5.0-2) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 16 Oct 2015 19:49:23 -0300
+
 qtwayland-opensource-src (5.5.0-1) experimental; urgency=medium
 
   * New upstream release.
