--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,9 @@
-qtwayland-opensource-src (5.5.1-1) UNRELEASED; urgency=medium
+qtwayland-opensource-src (5.5.1-1) experimental; urgency=medium
 
-  [ Lisandro Damián Nicanor Pérez Meyer ]
   * New upstream release.
     - Bump Qt build dependencies.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 16 Oct 2015 19:49:23 -0300
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 16 Oct 2015 20:44:52 -0300
 
 qtwayland-opensource-src (5.5.0-1) experimental; urgency=medium
 
