--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtwayland-opensource-src (5.5.1-2) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 21 Oct 2015 15:40:44 -0300
+
 qtwayland-opensource-src (5.5.1-1) experimental; urgency=medium
 
   * New upstream release.
