--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+qtwayland-opensource-src (5.6.0~beta-1) UNRELEASED; urgency=medium
+
+  [ Dmitry Shachnev ]
+  * New upstream beta release.
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 04 Jan 2016 15:38:11 +0300
+
 qtwayland-opensource-src (5.5.1-2) unstable; urgency=medium
 
   * Upload to unstable.
