--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ qtwayland-opensource-src (5.6.0~beta-1) UNRELEASED; urgency=medium
 
   [ Dmitry Shachnev ]
   * New upstream beta release.
+  * Update debian/watch to track experimental releases (needs to be reverted
+    before uploading 5.6.0 final).
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 04 Jan 2016 15:38:11 +0300
 
