--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtwayland-opensource-src (5.6.0~beta-2) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 19 Mar 2016 13:55:39 -0300
+
 qtwayland-opensource-src (5.6.0~beta-1) experimental; urgency=medium
 
   * New upstream beta release.
