Build depend upon qtbase5-dev.
While qtbase5-private-dev depends upon qtbase5-dev, this change +
the logic in qtbase's symbols files makes the source to wait for the
version of qtbase it was built with to migrate.

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ qtwayland-opensource-src (5.6.0-1) UNRELEASED; urgency=medium
   [ Lisandro Damián Nicanor Pérez Meyer ]
   * New upstream release.
     - Bump Qt build dependencies.
+  * Also build depend upon qtbase5-dev. This ensures that this source will not
+    migrate to testing before the minimum qtbase version required does even if
+    the version in testing fullfills all the symbols.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 19 Mar 2016 13:55:39 -0300
 
