--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ qtwayland-opensource-src (5.6.0-1) UNRELEASED; urgency=medium
     the version in testing fullfills all the symbols.
   * Switch debian/watch back to official releases.
   * Use secure URLs for the repos.
+  * Update Standards-Version to 3.9.7, no changes required.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 19 Mar 2016 13:55:39 -0300
 
