--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtwayland-opensource-src (5.6.0-2) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 09 Jun 2016 20:53:16 -0300
+
 qtwayland-opensource-src (5.6.0-1) experimental; urgency=medium
 
   * New upstream release.
