--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,9 @@
 qtwayland-opensource-src (5.6.0-2) UNRELEASED; urgency=medium
 
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * New upstream release.
+    - Bump Qt build dependencies.
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 09 Jun 2016 20:53:16 -0300
 
 qtwayland-opensource-src (5.6.0-1) experimental; urgency=medium
