--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ qtwayland-opensource-src (5.6.0-2) UNRELEASED; urgency=medium
   [ Lisandro Damián Nicanor Pérez Meyer ]
   * New upstream release.
     - Bump Qt build dependencies.
+  * Bump Standards-Version to 3.9.8, no changes required.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 09 Jun 2016 20:53:16 -0300
 
