--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,5 @@
-qtwayland-opensource-src (5.6.1-1) UNRELEASED; urgency=medium
+qtwayland-opensource-src (5.6.1-1) experimental; urgency=medium
 
-  [ Lisandro Damián Nicanor Pérez Meyer ]
   * New upstream release.
     - Bump Qt build dependencies.
   * Bump Standards-Version to 3.9.8, no changes required.
@@ -8,7 +7,7 @@ qtwayland-opensource-src (5.6.1-1) UNRELEASED; urgency=medium
   * Be verbose while removing stuff.
   * Update symbols files with current build log.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 09 Jun 2016 20:53:16 -0300
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 10 Jun 2016 14:00:30 -0300
 
 qtwayland-opensource-src (5.6.0-1) experimental; urgency=medium
 
