--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtwayland-opensource-src (5.6.1-2) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 13 Jun 2016 10:01:16 -0300
+
 qtwayland-opensource-src (5.6.1-1) experimental; urgency=medium
 
   * New upstream release.
