--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
-qtwayland-opensource-src (5.6.1-2) UNRELEASED; urgency=medium
+qtwayland-opensource-src (5.6.1-2) unstable; urgency=medium
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 13 Jun 2016 10:01:16 -0300
+  * Upload to unstable.
+
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 13 Jun 2016 10:06:10 -0300
 
 qtwayland-opensource-src (5.6.1-1) experimental; urgency=medium
 
