--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-qtwayland-opensource-src (5.7.0-1) UNRELEASED; urgency=medium
+qtwayland-opensource-src (5.7.0-1) experimental; urgency=medium
 
   [ Harald Sitter ]
   * New upstream release.
@@ -6,7 +6,7 @@ qtwayland-opensource-src (5.7.0-1) UNRELEASED; urgency=medium
   * New package qtwayland5-examples now containing examples
   * New package libqt5waylandcompositor5 and -dev for new library
   * New package qml-module-qtwayland-compositor for new qml module
-  * Refine install files to accomodate new library artifacts
+  * Refine install files to accommodate new library artifacts
   * Do not install private headers at all as they are unused according to
     codesearch
 
@@ -20,7 +20,7 @@ qtwayland-opensource-src (5.7.0-1) UNRELEASED; urgency=medium
     (has no public API), so removed symbols are OK.
   * Drop libqt5waylandclient5-dev package. This library has no public API.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 28 Jun 2016 15:05:14 +0200
+ -- Dmitry Shachnev <mitya57@debian.org>  Sat, 09 Jul 2016 00:01:41 +0300
 
 qtwayland-opensource-src (5.6.1-2) unstable; urgency=medium
 
