--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+qtwayland-opensource-src (5.7.0-2) UNRELEASED; urgency=medium
+
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 09 Jul 2016 16:03:50 +0300
+
 qtwayland-opensource-src (5.7.0-1) experimental; urgency=medium
 
   [ Harald Sitter ]
