--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,11 @@
-qtwayland-opensource-src (5.7.0-2) UNRELEASED; urgency=medium
+qtwayland-opensource-src (5.7.1~20161021-1) UNRELEASED; urgency=medium
 
   [ Dmitry Shachnev ]
   * Restore qtbase5-dev build-dependency.
+
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * New upstream snapshot.
+    - Bump Qt build dependencies.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 09 Jul 2016 16:03:50 +0300
 
