--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
 qtwayland-opensource-src (5.7.1~20161021-2) UNRELEASED; urgency=medium
 
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * Update symbols files with buildds' logs.
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 01 Nov 2016 09:03:27 -0300
 
 qtwayland-opensource-src (5.7.1~20161021-1) experimental; urgency=medium
