--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,9 @@
-qtwayland-opensource-src (5.7.1~20161021-2) UNRELEASED; urgency=medium
+qtwayland-opensource-src (5.7.1~20161021-2) unstable; urgency=medium
 
-  [ Lisandro Damián Nicanor Pérez Meyer ]
   * Update symbols files with buildds' logs.
   * Upload to unstable.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 01 Nov 2016 09:03:27 -0300
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Tue, 01 Nov 2016 09:07:54 -0300
 
 qtwayland-opensource-src (5.7.1~20161021-1) experimental; urgency=medium
 
