--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,5 @@
-qtwayland-opensource-src (5.9.0~rc-1) UNRELEASED; urgency=medium
+qtwayland-opensource-src (5.9.0~rc-1) experimental; urgency=medium
 
-  [ Dmitry Shachnev ]
   * New upstream release candidate.
   * Bump Qt build-dependencies to 5.9.0.
   * Update libqt5waylandcompositor5-dev.install for the new version.
@@ -13,7 +12,7 @@ qtwayland-opensource-src (5.9.0~rc-1) UNRELEASED; urgency=medium
   * Do not use gold linker, to keep the symbols versioned.
   * Update debian/copyright.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 28 May 2017 10:56:28 +0300
+ -- Dmitry Shachnev <mitya57@debian.org>  Sun, 28 May 2017 15:14:44 +0300
 
 qtwayland-opensource-src (5.7.1~20161021-2) unstable; urgency=medium
 
