--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ qtwayland-opensource-src (5.9.0-1) UNRELEASED; urgency=medium
 
   [ Dmitry Shachnev ]
   * New upstream stable release.
+  * Do not install Qt5Gui_QWaylandXCompositeGlxPlatformIntegrationPlugin.cmake
+    on armel/armhf.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 29 May 2017 15:08:54 +0300
 
