--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ qtwayland-opensource-src (5.9.0-1) UNRELEASED; urgency=medium
   * Do not install Qt5Gui_QWaylandXCompositeGlxPlatformIntegrationPlugin.cmake
     on armel/armhf.
   * Bump qtbase build-dependencies to 5.9.0 final.
+  * Add support for nodoc build profile.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 29 May 2017 15:08:54 +0300
 
