--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+qtwayland-opensource-src (5.9.1-1) UNRELEASED; urgency=medium
+
+  [ Dmitry Shachnev ]
+  * New upstream release.
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 07 Jul 2017 10:31:02 +0300
+
 qtwayland-opensource-src (5.9.0-1) experimental; urgency=medium
 
   * New upstream stable release.
