--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ qtwayland-opensource-src (5.9.1-1) UNRELEASED; urgency=medium
   [ Dmitry Shachnev ]
   * New upstream release.
   * Bump Qt build-dependencies to 5.9.1.
+  * Bump Standards-Version to 4.0.0, no changes needed.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 07 Jul 2017 10:31:02 +0300
 
