--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qtwayland-opensource-src (5.9.1-2) unstable; urgency=medium
+
+  * Upload to unstable.
+
+ -- Dmitry Shachnev <mitya57@debian.org>  Wed, 16 Aug 2017 15:29:50 +0300
+
 qtwayland-opensource-src (5.9.1-1) experimental; urgency=medium
 
   * New upstream release.
