--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ qtwayland-opensource-src (5.9.2-1) UNRELEASED; urgency=medium
   * New upstream release.
   * Bump Qt build-dependencies to 5.9.2.
   * Use debhelper compat level 10 and dh_missing.
+  * Update symbols files from the current build log.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 16 Oct 2017 10:33:51 +0300
 
