--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,12 @@
-qtwayland-opensource-src (5.9.2-1) UNRELEASED; urgency=medium
+qtwayland-opensource-src (5.9.2-1) experimental; urgency=medium
 
-  [ Dmitry Shachnev ]
   * New upstream release.
   * Bump Qt build-dependencies to 5.9.2.
   * Use debhelper compat level 10 and dh_missing.
   * Update symbols files from the current build log.
   * Bump Standards-Version to 4.1.1, stop using deprecated Priority: extra.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 16 Oct 2017 10:33:51 +0300
+ -- Dmitry Shachnev <mitya57@debian.org>  Mon, 16 Oct 2017 11:05:35 +0300
 
 qtwayland-opensource-src (5.9.1-2) unstable; urgency=medium
 
