--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+qtwayland-opensource-src (5.9.2-2) UNRELEASED; urgency=medium
+
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 17 Oct 2017 17:13:50 +0300
+
 qtwayland-opensource-src (5.9.2-1) experimental; urgency=medium
 
   * New upstream release.
