--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,9 @@
-qtwayland-opensource-src (5.9.2-2) UNRELEASED; urgency=medium
+qtwayland-opensource-src (5.9.2-2) experimental; urgency=medium
 
-  [ Dmitry Shachnev ]
   * Move qtwaylandscanner tool into its own qtwayland5-dev-tools package,
     make that package Multi-Arch: foreign.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 17 Oct 2017 17:13:50 +0300
+ -- Dmitry Shachnev <mitya57@debian.org>  Wed, 18 Oct 2017 20:58:04 +0300
 
 qtwayland-opensource-src (5.9.2-1) experimental; urgency=medium
 
