--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,10 @@
 qtwayland-opensource-src (5.9.2-3) UNRELEASED; urgency=medium
 
+  [ Dmitry Shachnev ]
+  * Update for Qt binaries location change in qtbase 5.9.2+dfsg-3.
+    - Install qtwaylandscanner to the new location.
+    - Provide a compatibility symlink in the old location.
+    - Bump qtbase5-private-dev and qttools5-dev-tools build-dependencies.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 23 Oct 2017 22:02:17 +0300
 
