--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-qtwayland-opensource-src (5.9.2-0neon) UNRELEASED; urgency=medium
+qtwayland-opensource-src (5.9.3-0neon) UNRELEASED; urgency=medium
 
   * New release
   * New release
+  * new release
 
- -- Jonathan Riddell <jr@jriddell.org>  Fri, 10 Nov 2017 11:41:41 +0000
+ -- Jonathan Riddell <jr@jriddell.org>  Wed, 22 Nov 2017 17:23:11 +0000
 
 qtwayland-opensource-src (5.9.0-1) experimental; urgency=medium
 
