--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ qtwayland-opensource-src (5.9.3-0ubuntu1) UNRELEASED; urgency=medium
 
   * New upstream release.
   * Bump build dependencies to Qt 5.9.3.
+  * Update symbols from build logs.
 
  -- Simon Quigley <tsimonq2@ubuntu.com>  Wed, 13 Dec 2017 21:37:29 -0600
 
