--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-qtwayland-opensource-src (5.9.4-0ubuntu1) UNRELEASED; urgency=medium
+qtwayland-opensource-src (5.9.4-0ubuntu1) bionic; urgency=medium
 
   * New upstream release.
   * Add dont-create-hidden-egl-surfaces.patch which fixes a crash in a Wayland
     session when a QQuickWindow hides and then is destroyed.
 
- -- Simon Quigley <tsimonq2@ubuntu.com>  Sun, 25 Feb 2018 20:26:25 -0600
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Sun, 25 Feb 2018 20:49:52 -0600
 
 qtwayland-opensource-src (5.9.3-0ubuntu1) bionic; urgency=medium
 
