--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ qtwayland-opensource-src (5.10.1-1) UNRELEASED; urgency=medium
   [ Dmitry Shachnev ]
   * New upstream release.
   * Bump Qt build-dependencies to 5.10.1.
+  * Update debian/watch for the new upstream tarball names.
   * Use dh_auto_configure provided by debhelper.
   * Fix cross builds by building and using native qtwaylandscanner and
     setting QMAKE_QMAKE and PKG_CONFIG_LIBDIR variables.
