--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ qtwayland-opensource-src (5.10.1-1) UNRELEASED; urgency=medium
     setting QMAKE_QMAKE and PKG_CONFIG_LIBDIR variables.
   * Remove obsolete note that Qt Wayland Compositor is a tech preview.
     It became an official module in Qt 5.8 release.
+  * Add some new headers to libqt5waylandcompositor5-dev.install.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 15 Dec 2017 18:34:29 +0300
 
