--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ qtwayland-opensource-src (5.10.1-1) UNRELEASED; urgency=medium
     It became an official module in Qt 5.8 release.
   * Add some new headers to libqt5waylandcompositor5-dev.install.
   * Update symbols files from the current build log.
+  * Update debian/copyright.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 15 Dec 2017 18:34:29 +0300
 
