--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ qtwayland-opensource-src (5.10.1-1) UNRELEASED; urgency=medium
   * Update symbols files from the current build log.
   * Update debian/copyright.
   * Update Vcs fields for migration to salsa.debian.org.
+  * Bump Standards-Version to 4.1.3, no changes needed.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 15 Dec 2017 18:34:29 +0300
 
