--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,5 @@
-qtwayland-opensource-src (5.10.1-1) UNRELEASED; urgency=medium
+qtwayland-opensource-src (5.10.1-1) experimental; urgency=medium
 
-  [ Dmitry Shachnev ]
   * New upstream release.
   * Bump Qt build-dependencies to 5.10.1.
   * Update debian/watch for the new upstream tarball names.
@@ -15,7 +14,7 @@ qtwayland-opensource-src (5.10.1-1) UNRELEASED; urgency=medium
   * Update Vcs fields for migration to salsa.debian.org.
   * Bump Standards-Version to 4.1.3, no changes needed.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 15 Dec 2017 18:34:29 +0300
+ -- Dmitry Shachnev <mitya57@debian.org>  Tue, 06 Mar 2018 13:16:46 +0300
 
 qtwayland-opensource-src (5.9.2-3) unstable; urgency=medium
 
