--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,13 @@
 qtwayland-opensource-src (5.10.1-2) UNRELEASED; urgency=medium
 
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * Generate libqt5waylandclient5-dev. The files where previously generated
+    and removed before packaging because they where not stable, but now a part
+    of them have become stable so it's time to ship them.
+    Also make the package recommend qtwayland5-dev-tools which provides the
+    tools necessary to generate C++ interfaces form the XML definitions.
+    Thanks Andreas Cord-Landwehr for the bug report! (Closes: #893387).
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 18 Mar 2018 16:13:53 -0300
 
 qtwayland-opensource-src (5.10.1-1) experimental; urgency=medium
