--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+qtwayland-opensource-src (5.9.4-0ubuntu2) UNRELEASED; urgency=medium
+
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * Generate libqt5waylandclient5-dev. The files where previously generated
+    and removed before packaging because they where not stable, but now a part
+    of them have become stable so it's time to ship them.
+    Also make the package recommend qtwayland5-dev-tools which provides the
+    tools necessary to generate C++ interfaces form the XML definitions.
+    Thanks Andreas Cord-Landwehr for the bug report! (Closes: #893387).
+
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Fri, 30 Mar 2018 23:46:37 -0500
+
 qtwayland-opensource-src (5.9.4-0ubuntu1) bionic; urgency=medium
 
   * New upstream release.
