--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,7 @@
-qtwayland-opensource-src (5.9.4-0ubuntu2) UNRELEASED; urgency=medium
+qtwayland-opensource-src (5.9.4-0ubuntu2) bionic; urgency=medium
+
+  * Cherry-pick commit from the VCS Git repository which generates
+    libqt5waylandclient5-dev (LP: #1760185).
 
   [ Lisandro Damián Nicanor Pérez Meyer ]
   * Generate libqt5waylandclient5-dev. The files where previously generated
@@ -8,7 +11,7 @@ qtwayland-opensource-src (5.9.4-0ubuntu2) UNRELEASED; urgency=medium
     tools necessary to generate C++ interfaces form the XML definitions.
     Thanks Andreas Cord-Landwehr for the bug report! (Closes: #893387).
 
- -- Simon Quigley <tsimonq2@ubuntu.com>  Fri, 30 Mar 2018 23:46:37 -0500
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Fri, 30 Mar 2018 23:52:29 -0500
 
 qtwayland-opensource-src (5.9.4-0ubuntu1) bionic; urgency=medium
 
