--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtwayland-opensource-src (5.10.1-3) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 07 Apr 2018 19:42:20 -0300
+
 qtwayland-opensource-src (5.10.1-2) experimental; urgency=medium
 
   * Generate libqt5waylandclient5-dev. The files where previously generated
