--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
-qtwayland-opensource-src (5.10.1-3) UNRELEASED; urgency=medium
+qtwayland-opensource-src (5.10.1-3) unstable; urgency=medium
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 07 Apr 2018 19:42:20 -0300
+  * Release to unstable.
+
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sat, 07 Apr 2018 19:45:46 -0300
 
 qtwayland-opensource-src (5.10.1-2) experimental; urgency=medium
 
