--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+qtwayland-opensource-src (5.10.1-4) UNRELEASED; urgency=medium
+
+  [ Simon Quigley ]
+  * Add my name to Uploaders.
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 08 Apr 2018 12:46:48 -0500
+
 qtwayland-opensource-src (5.10.1-3) unstable; urgency=medium
 
   * Release to unstable.
