--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qtwayland-opensource-src (5.9.5-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Sat, 14 Apr 2018 15:25:35 -0500
+
 qtwayland-opensource-src (5.9.4-0ubuntu2) bionic; urgency=medium
 
   * Cherry-pick commit from the VCS Git repository which generates
