--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-qtwayland-opensource-src (5.9.5-0ubuntu1) UNRELEASED; urgency=medium
+qtwayland-opensource-src (5.9.5-0ubuntu1) bionic; urgency=medium
 
   * New upstream release.
 
- -- Simon Quigley <tsimonq2@ubuntu.com>  Sat, 14 Apr 2018 15:25:35 -0500
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Sat, 14 Apr 2018 15:29:01 -0500
 
 qtwayland-opensource-src (5.9.4-0ubuntu2) bionic; urgency=medium
 
