--- a/debian/changelog
+++ b/debian/changelog
@@ -34,20 +34,6 @@ qtwayland-opensource-src (5.10.1-1) experimental; urgency=medium
 
  -- Dmitry Shachnev <mitya57@debian.org>  Tue, 06 Mar 2018 13:16:46 +0300
 
-qtwayland-opensource-src (5.10.0-0neon) UNRELEASED; urgency=medium
-
-  * 5.10
-
- -- Jonathan Riddell <jr@jriddell.org>  Wed, 13 Sep 2017 13:18:32 +0100
-
-qtwayland-opensource-src (5.9.3-0neon) UNRELEASED; urgency=medium
-
-  * New release
-  * New release
-  * new release
-
- -- Jonathan Riddell <jr@jriddell.org>  Wed, 22 Nov 2017 17:23:11 +0000
-
 qtwayland-opensource-src (5.9.2-3) unstable; urgency=medium
 
   * Update for Qt binaries location change in qtbase 5.9.2+dfsg-3.
@@ -69,6 +55,7 @@ qtwayland-opensource-src (5.9.2-1) experimental; urgency=medium
 
   * New upstream release.
   * Bump Qt build-dependencies to 5.9.2.
+  * Use debhelper compat level 10 and dh_missing.
   * Update symbols files from the current build log.
   * Bump Standards-Version to 4.1.1, stop using deprecated Priority: extra.
 
