--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qtwayland-opensource-src (5.11.0-0neon) UNRELEASED; urgency=medium
+
+  * 5.11 release to neon
+
+ -- Bhushan Shah <bshah@kde.org>  Mon, 28 May 2018 03:43:49 +0000
+
 qtwayland-opensource-src (5.10.1-3) unstable; urgency=medium
 
   * Release to unstable.
