--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ qtwayland-opensource-src (5.11.1-1) UNRELEASED; urgency=medium
     - Bump Qt build dependencies.
   * Mark qtwayland5-doc[-html] as Multi-Arch: foreign as noted by the
     multiarch hinter.
+  * Update symbols files with current build log.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 08 Apr 2018 12:46:48 -0500
 
