Minor debian/copyright update.

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ qtwayland-opensource-src (5.11.2-3) UNRELEASED; urgency=medium
   [ Dmitry Shachnev ]
   * Make tests non-fatal on mips/mipsel, because of failures.
   * Remove dbgsym migration code, it is no longer needed.
+  * Minor debian/copyright update.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 17 Oct 2018 19:50:05 +0300
 
